--- a/type1.html
+++ b/type1.html
@@ -252,19 +252,43 @@
             </div>
         </section>
         <section class="part3">
+            <input type="radio" name="sec3_slide" id="s3_slide1" checked>
+            <input type="radio" name="sec3_slide" id="s3_slide2">
+            <input type="radio" name="sec3_slide" id="s3_slide3">
+            <input type="radio" name="sec3_slide" id="s3_slide4">
+            <input type="radio" name="sec3_slide" id="s3_slide5">
             <div class="back_img">
                 <div class="img_wrap"></div>
-                <img src="./img/rose.jpg" alt="rose.jpg">
+                <img src="./img/rose2.jpg" alt="rose">
             </div>
             <div class="part3_sub">
-                <div class="part3_subimg"></div>
+                <div class="part3_subimg 3_s1"></div>
+                <div class="part3_subimg 3_s2"></div>
+                <div class="part3_subimg 3_s3"></div>
+                <div class="part3_subimg 3_s4"></div>
+                <div class="part3_subimg 3_s5"></div>
                 <div class="part3_txt">
                     <p>About Pets</p>
-                    <h2>Where pets from?<br>A map pets guide</h2>
-                    <div class="part3_bar"></div>
-                    <div class="part3_btn">
-                        <p>Read More</p>
+                    <div class="move_h2">
+                        <h2>Where pets from?<br>A map pets guide1</h2>
+                        <h2>Where pets from?<br>A map pets guide2</h2>
+                        <h2>Where pets from?<br>A map pets guide3</h2>
+                        <h2>Where pets from?<br>A map pets guide4</h2>
+                        <h2>Where pets from?<br>A map pets guide5</h2>
                     </div>
+                    <div class="part3_bar"></div>
+                    <div class="part3_btn rounded">
+                        <div class="circle c1"></div>
+                        <div class="circle c2"></div>
+                        <h4>Save a pet</h4>
+                    </div>
+                </div>
+                <div class="part3_circle">
+                    <label for="s3_slide1"></label>
+                    <label for="s3_slide2"></label>
+                    <label for="s3_slide3"></label>
+                    <label for="s3_slide4"></label>
+                    <label for="s3_slide5"></label>
                 </div>
             </div>
         </section>
@@ -284,6 +308,9 @@
                 <div class="part4_forimg img1">
                     <div class="part4_img"></div>
                 </div>
+                <div class="part4_forimg img3">
+                    <div class="part4_img"></div>
+                </div>
                 <div class="p4_txt txt2">
                     <h3>What type of flower arrangements do<br>our florist deliver?</h3>
                     <p>We carry the widst variety of soses of any
@@ -299,7 +326,45 @@
                 </div>
         </section>
     </section>
-    <footer id="footer"></footer>
+    <footer class="footer">
+        <div class="in_footer">
+            <div class="footer_box">
+                <ul>
+                    <li class="logo2">
+                        <h3>Save A Pet</h3>
+                        <span>COPYRIGHT © 2018 KSH,JTI all rights reserved.</span>
+                    </li>
+                    <li class="box1">
+                        <h4>TITLE</h4>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                    </li>
+                    <li class="box2">
+                        <h4>TITLE</h4>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                    </li>
+                    <li class="box3">
+                        <h4>TITLE</h4>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                        <p>CONTENT</p>
+                    </li>
+                    <li class="call">
+                        <h4>INFO</h4>
+                        <p><span>ADDRESS : </span>서울 송파구 삼전로 72 (삼전동) LS타워</p>
+                        <p><span>CALL : </span>010-0000-0000</p>
+                        <p><span>OPEN : </span>11:00 - 21:00</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
